--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,15 @@ PORT=5000
 NODE_ENV=production
 
 # Database Configuration (Railway MySQL)
-DB_HOST=your-railway-mysql-host.railway.app
-DB_PORT=3306
+# Use the MYSQL_PUBLIC_URL from Railway dashboard
+DATABASE_URL=mysql://root:AcLWzwfYOkCdJqBeizjHeEuiYmGUEufs@crossover.proxy.rlwy.net:28952/railway
+
+# OR use individual connection parameters:
+DB_HOST=crossover.proxy.rlwy.net
+DB_PORT=28952
 DB_NAME=railway
 DB_USER=root
-DB_PASSWORD=your-database-password
+DB_PASSWORD=AcLWzwfYOkCdJqBeizjHeEuiYmGUEufs
 
 # JWT Secret (Generate a strong random string)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
